# nexus

./: Cargo.toml  Makefile.toml  README.md  architecture.excalidraw  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
app/: Cargo.toml
app/src/: error_template.rs  errors.rs  lib.rs  public.rs
app/src/common/: footer.rs  header.rs
app/src/pages/: about.rs  checkout.rs  download.rs  email_verification_attempt.rs  home.rs  login_and_signup.rs  mod.rs  support_faq.rs
app/src/server/: change_profile.rs  create_checkout.rs  csrf.rs  login.rs  logout.rs  mod.rs  signup.rs  utilities.rs  verify_email.rs
app/src/server/download/: download_game_version.rs  download_launcher.rs  download_utils.rs
app/src/server/globals/: app_state.rs  dynamo.rs  env_var.rs  mod.rs
app/tests/: kms_test.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
frontend/src/common/: footer.rs  header.rs
frontend/src/pages/: download.rs  login_and_signup.rs  support_faq.rs
server/: Cargo.toml
server/src/: env_var.rs  fileserv.rs  main.rs  stripe_webhook.rs
server/src/server/: login.rs  logout.rs  public.rs  signup.rs  stripe_webhook.rs
server/src/server/download/: download_game_version.rs  download_launcher.rs  download_utils.rs
src/: app.rs  app_state.rs  auth.rs  dynamo.rs  env_var.rs  errors.rs  fileserv.rs  lib.rs  login.rs  main.rs  site.rs
src/common/: footer.rs  header.rs  mod.rs
src/pages/: about.rs  checkout.rs  checkout_cancel.rs  checkout_success.rs  community.rs  credits.rs  download.rs  email_verification.rs  email_verification_attempt.rs  end_user_license_agreement.rs  home.rs  login.rs  login_and_signup.rs  mod.rs  support_faq.rs  terms_and_conditions.rs
src/server/: change_profile.rs  create_checkout.rs  login.rs  logout.rs  mod.rs  public.rs  signup.rs  stripe_webhook.rs  utilities.rs  verify_email.rs
src/server/download/: download_game_version.rs  download_launcher.rs  download_utils.rs  mod.rs
style/: _variables.scss  main.css  main.scss
